# Sistema_GAD

./: .env.dev  .env.prod.example  .env.test  .gitignore  README.md  SETUP_STATUS.md  compose.yaml  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  project.json  tsconfig.base.json  tsconfig.json
.obsidian/: community-plugins.json  workspace.json
.obsidian/plugins/copilot/: data.json
apps/api-spring/: build.gradle
apps/backend/: build.gradle  project.json
apps/docs/: pyproject.toml
apps/frontend-discente/: index.html  package.json  vite.config.mts
apps/frontend-discente-e2e/: package.json  playwright.config.ts
apps/frontend-docente/: index.html  package.json  vite.config.mts
apps/frontend-docente-e2e/: package.json  playwright.config.ts
apps/pipeline/: README.md  project.json  pyproject.toml
apps/pipeline-python/: README.md  project.json  pyproject.toml
apps/web-react/: index.html  package.json  vite.config.mts
apps/web-react-e2e/: package.json  playwright.config.ts
copilot/copilot-conversations/: Olá@20260418_184821.md
docs/: ENVIRONMENT.md  project_combined.md
docs/Sistema_GAD_docs/: Atividades Diversificadas (respostas).xlsx  FICHA DE DADOS INICIAIS.docx  PLANILHA DE PONTUAÇÃO.xlsx  Termo de estágio IFMS - Vitor Santos.docx
libs/api-client-ts/: README.md  package.json  vitest.config.mts
libs/contracts-ts/: README.md  package.json  vitest.config.mts
libs/ui-components/: README.md  package.json  vite.config.mts
scripts/: load-env.ps1  project-graph.ts  start-dev.ps1
(+76 files in other folders)
